--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/bshankar/todoCl/issues"
   },
-  "homepage": "https://github.com/bshankar/todoCl#readme"
+  "homepage": "https://github.com/bshankar/todoCl#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.1"
+  }
 }
