add one more task

--- a/src/tasks.json
+++ b/src/tasks.json
@@ -10,6 +10,12 @@
       "Title": "Home",
       "Date": "29/07/2017",
       "Description": "Eat cookies"
+    },
+
+    {
+      "Title": "Konoha",
+      "Date": "29/07/2017",
+      "Description": "do clean"
     }
   ]
 }
